updated the social links

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </div>
     </main>
     <div class="fixed top-1/2 left-2 flex flex-col">
-      <a href="https://www.linkedin.com/in/ritwiksadhu/" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform  h-10  grid items-center bg-blue-900"><img class="w-10 " src="./icons/github.svg" alt=""></a>
-      <a href="" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform  h-10  grid items-center bg-blue-900"><img class="w-10 " src="./icons/linkedin.svg" alt=""></a>
+      <a href="https://github.com/ritwiksadhu/quick_recipies" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform  h-10  grid items-center bg-blue-900"><img class="w-10 " src="./icons/github.svg" alt=""></a>
+      <a href="https://www.linkedin.com/in/ritwiksadhu/" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform  h-10  grid items-center bg-blue-900"><img class="w-10 " src="./icons/linkedin.svg" alt=""></a>
     </div>
     <script src="./script.js"></script>
   </body>
