minified html,css,js

--- a/index.html
+++ b/index.html
@@ -1,63 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./output.css">
-    <title>Quick Recipies</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
-  </head>
-  <body class="text-gray-700">
-
-    <main class="px-8 py-4">
-      <header class="flex flex-col  sm:flex-row md:flex-row justify-between items-center">
-        <h2 class="text-gray-700 text-4xl "> <img  class="w-10 inline-block" src="./icons/chef.svg" alt=""> Quick Recipies</h2>
-        <form id="searchForm" class=" mt-2 border-2 rounded-full p-1 " >
-          <input type="text" class="  outline-none pl-3">
-          <button type="submit"> <img class="w-9 inline-block" src="./icons/search.svg" alt=""> </button>
-        </form>
-      </header>
-
-      <!-- RECIPIE DISPLAY SECTION  -->
-
-      <div id="detailspage" class=" z-10 overflow-scroll hidden top-0 left-0 p-10 fixed w-full h-full bg-slate-500/30 scrollbar-hide">
-        <div  class="w-full bg-gray-50 h-fit relative pt-3 px-7"> 
-          <button id="closebtn" class="w-fit h-fit grid place-content-center absolute -top-3 -right-3 rounded-full bg-red-300 px-2">X</button>
-
-          <h2 id="details__title" class="font-bold 5xl mx-auto"></h2>
-          <h3 class=" font-bold border-b-2"><img class="w-6 inline-block" src="./icons/scroll.svg" alt=""> Ingredients</h3>
-          <ul id="details__ingredients"></ul>
-          <h3 class=" font-bold border-b-2 mt-3"> <img class="w-6 inline-block" src="./icons/path.svg" alt=""> Steps</h3>
-
-          <ol id="details__instructions"></ol>
-        </div>
-      </div>
-      <!-- RECIPIE DISPLAY SECTION  ENDED-->
-
-      <!-- OPTIONS SECTION STARTED-->
-      <div>
-        <div class=" whitespace-nowrap overflow-scroll scrollbar-hide">
-          <button onClick="fetchData('')" class=" cursor-pointer  transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/sparkles.svg" alt=""> Latest Recipies</button>
-          <button onClick="fetchData('veg')" class=" cursor-pointer  transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/carrot.svg" alt=""> Veg Recipies</button>
-          <button onClick="fetchData('Healthy')" class=" cursor-pointer  transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/biceps.svg" alt=""> Healthy Recipies</button>
-          <button onClick="fetchData('vegan')" class=" cursor-pointer  transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/herb.svg" alt=""> Vegan Recipies</button>
-        </div>
-        <!-- OPTIONS SECTION ENDED -->
-        
-        <div id="cards__container" class=" sm:justify-between md:justify-between mt-8 flex justify-center h-full w-full flex-wrap">
-          <!-- CARDS GOES HERE -->
-
-        </div>
-      </div>
-    </main>
-    <div class="fixed top-1/2 left-2 flex flex-col">
-      <a href="https://github.com/ritwiksadhu/quick_recipies" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform  h-10  grid items-center bg-blue-900"><img class="w-10 " src="./icons/github.svg" alt=""></a>
-      <a href="https://www.linkedin.com/in/ritwiksadhu/" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform  h-10  grid items-center bg-blue-900"><img class="w-10 " src="./icons/linkedin.svg" alt=""></a>
-    </div>
-    <script src="./script.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="./output.css"><title>Quick Recipies</title><link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png"><link rel="manifest" href="./favicon/site.webmanifest"></head><body class="text-gray-700"><main class="px-8 py-4"><header class="flex flex-col sm:flex-row md:flex-row justify-between items-center"><h2 class="text-gray-700 text-4xl"><img class="w-10 inline-block" src="./icons/chef.svg" alt=""> Quick Recipies</h2><form id="searchForm" class="mt-2 border-2 rounded-full p-1"><input type="text" class="outline-none pl-3"><button type="submit"><img class="w-9 inline-block" src="./icons/search.svg" alt=""></button></form></header><div id="detailspage" class="z-10 overflow-scroll hidden top-0 left-0 p-10 fixed w-full h-full bg-slate-500/30 scrollbar-hide"><div class="w-full bg-gray-50 h-fit relative pt-3 px-7"><button id="closebtn" class="w-fit h-fit grid place-content-center absolute -top-3 -right-3 rounded-full bg-red-300 px-2">X</button><h2 id="details__title" class="font-bold 5xl mx-auto"></h2><h3 class="font-bold border-b-2"><img class="w-6 inline-block" src="./icons/scroll.svg" alt=""> Ingredients</h3><ul id="details__ingredients"></ul><h3 class="font-bold border-b-2 mt-3"><img class="w-6 inline-block" src="./icons/path.svg" alt=""> Steps</h3><ol id="details__instructions"></ol></div></div><div><div class="whitespace-nowrap overflow-scroll scrollbar-hide"><button onclick='fetchData("")' class="cursor-pointer transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/sparkles.svg" alt=""> Latest Recipies</button><button onclick='fetchData("veg")' class="cursor-pointer transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/carrot.svg" alt=""> Veg Recipies</button><button onclick='fetchData("Healthy")' class="cursor-pointer transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/biceps.svg" alt=""> Healthy Recipies</button><button onclick='fetchData("vegan")' class="cursor-pointer transition-all ease-in-out hover:scale-110 m-2 inline-block font-bold mt-12 pb-2 border-b"><img class="w-6 inline-block" src="./icons/herb.svg" alt=""> Vegan Recipies</button></div><div id="cards__container" class="sm:justify-between md:justify-between mt-8 flex justify-center h-full w-full flex-wrap"></div></div></main><div class="fixed top-1/2 left-2 flex flex-col"><a href="https://github.com/ritwiksadhu/quick_recipies" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform h-10 grid items-center bg-blue-900"><img class="w-10" src="./icons/github.svg" alt=""></a><a href="https://www.linkedin.com/in/ritwiksadhu/" target="_blank" class="rounded-full px-.5 mt-2 hover:scale-125 transition-transform h-10 grid items-center bg-blue-900"><img class="w-10" src="./icons/linkedin.svg" alt=""></a></div><script src="./script.js"></script></body></html>
